--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logo and YouTube Video</title>
+    <title>Virasat 2024</title>
     <style>
         body {
             display: flex;
